<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <!-- everything you already have -->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="5"
            android:gravity="left"
            android:padding="5dp"
            android:text="order:"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:textSize="20dp"
            android:text=""
            android:textStyle="bold"
            android:textColor="#e92d3a"

            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="5"
            android:gravity="left"
            android:padding="5dp"
            android:text="ชื่อสินค้า"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_order_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:textSize="20dp"
            android:text=""
            android:textStyle="bold"
            android:textColor="#e92d3a"

            />


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="5"
            android:gravity="left"
            android:padding="5dp"
            android:text="ราคา"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/text_order_product_price_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:textSize="20dp"
            android:text=""
            android:textStyle="bold"
            android:textColor="#e92d3a"

            />


    </LinearLayout>


    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingLeft="5dp"
        android:text="@string/lblAddressIp"
        android:textColor="#fff"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/txt_ip"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|top"
        android:text="192.168.1.87"
        android:textSize="16sp"
        android:visibility="gone"
        >

    </EditText>
    <Button
        android:id="@+id/btn_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConn"
        android:visibility="gone"

        >
    </Button>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical|top"
        android:text="@string/txt_content"
        android:textSize="16dp"

        />


    <Button
        android:id="@+id/btnSend"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/b_login"
        android:textSize="15dp"
        android:textStyle="bold"
        android:ems="12"

        android:textColor="#FFFFFF"
        android:text="Print"

        />



    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test"

        android:visibility="gone"
        >
    </Button>

    <Button
        android:id="@+id/btn_opencasher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_opencasher"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"
        android:visibility="gone"

        />

</LinearLayout>
