<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="show"

        android:textSize="30dp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/b_add"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="เพิ่ม"
        android:textStyle="bold"
        android:ems="20"
        android:textSize="20dp"
        android:visibility="gone"
        />
    <TableRow

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:layout_marginLeft="5dp"
        android:ems="12"
android:visibility="gone"
        >



        <EditText
            android:id="@+id/txtKeySearch_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="5dp"

            />

        <Button
            android:id="@+id/btnSearch_1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="ค้นหา"

            />
    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/listView_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_TotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"

        android:gravity="center"
        android:text="tv_TotalPrice"

        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/t_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"

        android:gravity="center"
        android:text="t_name"

        android:textSize="30dp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingLeft="5dp"
        android:text="@string/lblAddressIp"
        android:textColor="#fff"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/txt_ip"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|top"
        android:text="192.168.1.87"
        android:textSize="16sp"
        android:visibility="gone"
        >

    </EditText>
    <Button
        android:id="@+id/btn_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConn"
        android:visibility="gone"

        >
    </Button>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical|top"
        android:text="@string/txt_content"
        android:textSize="16dp"

        />


    <Button
        android:id="@+id/btnSend"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/b_login"
        android:textSize="15dp"
        android:textStyle="bold"
        android:ems="12"

        android:textColor="#FFFFFF"
        android:text="Print"

        />



    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test"

        android:visibility="gone"
        >
    </Button>

    <Button
        android:id="@+id/btn_opencasher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_opencasher"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"
        android:visibility="gone"

        />

    <!--TODO (2) Add an id to the TextView with the value @+id/tv_toy_names-->
    <TextView
        android:id="@+id/tv_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="tv_names"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        android:text=""
        />

    <Button
        android:id="@+id/b_back"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="กลับ"
        android:textStyle="bold"
        android:ems="20"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/b_back"
        android:visibility="gone"
        />

</LinearLayout>
